@@ -7,6 +7,7 @@ Users which contributed patches added to versions after 1.0:
 * DavidClaughton
 * DavidWall
 * GyPark
+* JuanMtnezPineda
 * MikeCastle
 * RichardP
 * Robin Rowe (rower@movieeditor.com)
